
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int Dr7; int Dr6; scalar_t__ Dr0; scalar_t__ Dr1; scalar_t__ Dr2; int Dr3; int member_0; } ;
typedef int HANDLE ;
typedef TYPE_1__ CONTEXT ;


 int CONTEXT_DEBUG_REGISTERS ;
 int GetThreadContext (int ,TYPE_1__*) ;
 int MAGICESPINLSA ;
 int ResumeThread (int ) ;
 int SetThreadContext (int ,TYPE_1__*) ;
 int SuspendThread (int ) ;

void add_thread(HANDLE thread)
{
    CONTEXT ctx = {CONTEXT_DEBUG_REGISTERS};



    SuspendThread(thread);
    GetThreadContext(thread,&ctx);
 ctx.Dr7=0xd0000540;
 ctx.Dr6=0xffff0ff0;
 ctx.Dr3=MAGICESPINLSA;
 ctx.Dr2=0;
 ctx.Dr1=0;
 ctx.Dr0=0;
    SetThreadContext(thread, &ctx);
    ResumeThread(thread);


}
